2005-07-04  Ben Elliston  <bje@gnu.org>

	* Makefile.in (RUNTEST): Set to runtest.

2005-07-03  Richard Henderson  <rth@redhat.com>

	* amd64-tdep.c (amd64_sse_type): New.	
	(amd64_register_info): Use it for xmm registers.  Constify.
	(amd64_register_type): Initialize amd64_sse_type as needed.

2005-07-03  Steve Ellcey  <sje@cup.hp.com>

	* configure.ac: Add arguments to AC_DEFINE calls.
	* acconfig.h: Remove file.
	* acinclude.m4 (AC_GNU_SOURCE): Remove definition.
	* configure: Regenerate.
	* config.in: Regenerate.

2005-07-01  Mark Kettenis  <kettenis@gnu.org>

	* mips-tdep.c (mips_insn16_frame_prev_register)
	(mips_insn32_frame_prev_register, mips_stub_frame_prev_register):
	Change type of last argument to `gdb_byte *'.

2005-07-01  Steve Ellcey  <sje@cup.hp.com>

	* MAINTAINERS (Write After Approval): Add myself.

2005-07-01  Mark Kettenis  <kettenis@gnu.org>

	* solib-svr4.c: Include "solib.h".
	* Makefile.in (solib-svr4.o): Update dependencies.

2005-06-28  Mark Kettenis  <kettenis@gnu.org>

	* eval.c (evaluate_struct_tuple): Use strcmp instead of
	DEPRECATED_STREQ.

2005-06-27  Michael Snyder  <msnyder@redhat.com>

	* config/mn10300/linux.mt: New file.
	* configure.tgt: Add rule for am33 / mn10300-linux.
	* mn10300-tdep.c, mn10300-tdep.h: Bump copyright year.

2005-06-27  Wu Zhou  <woodzltc@cn.ibm.com>

	* gdbtypes.c (get_discrete_bounds): Fix a comment typo.

2005-06-25  Mark Kettenis  <kettenis@gnu.org>

	* sol-thread.c (sol_thread_xfer_memory): Change type of second
	argument to `gdb_byte *'.
	(sol_thread_xfer_partial): Change type of readbuf and writebuf
	arguments to `gdb_byte *'.

	* mips-tdep.c (mips_xfer_register, mips_o32_return_value) 
	(mips_integer_to_address): Use gdb_byte instead of bfd_byte.

2005-06-24  Mark Kettenis  <kettenis@gnu.org>

	* ppcobsd-nat.c: Include "gdbcore.h", <sys/signal.h>,
	<machine/frame.h>, <machine/pcb.h> and "bsd-kvm.h".
	(ppcobsd_supply_pcb): New function.
	(_initialize_ppcobsd_nat): Enable libkvm interface.